--- a/neural-network/LSTM_Model1.ipynb
+++ b/neural-network/LSTM_Model1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled89.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMmffM97DHsFYhSn1GkJtSO",
+      "authorship_tag": "ABX9TyMCZySXAzTomAoR1CHhcEjE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,11 @@
       "metadata": {
         "id": "ucRgRhIcos34",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d217ccf7-11e1-4947-a98a-3fd7498350fa"
       },
       "source": [
         "# Imports\n",
@@ -49,8 +53,16 @@
         "from matplotlib import pyplot\n",
         "import numpy"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -71,16 +83,16 @@
       "metadata": {
         "id": "NwnEhZzro1vG",
         "colab_type": "code",
+        "outputId": "a4795f36-59d4-434c-acb8-f2c637def351",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 372
-        },
-        "outputId": "184118ac-a157-447f-cb95-03815e331595"
+        }
       },
       "source": [
         "defense_df.head()"
       ],
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -627,7 +639,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 3
         }
       ]
     },
@@ -765,73 +777,43 @@
       "metadata": {
         "id": "3v_HoJvUrkEV",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 289
-        },
-        "outputId": "9fe60d7c-b572-48c7-ab27-2597c4dbf294"
+        "colab": {}
       },
       "source": [
-        "# The main code\n",
-        "series = make_series('SF')\n",
-        "X = series.values\n",
-        "supervised = timeseries_to_supervised(X, 1)\n",
-        "supervised_values = supervised.values\n",
+        "def lstm_pred(team):\n",
+        "    series = make_series(team)\n",
+        "    X = series.values\n",
+        "    supervised = timeseries_to_supervised(X, 1)\n",
+        "    supervised_values = supervised.values\n",
         "\n",
-        "# split data into train and test-sets\n",
-        "train, test = supervised_values[0:-16], supervised_values[-16:]\n",
+        "    # Split data into train and test-sets\n",
+        "    train, test = supervised_values[0:-16], supervised_values[-16:]\n",
         "\n",
-        "# transform the scale of the data\n",
-        "scaler, train_scaled, test_scaled = scale(train, test)\n",
+        "    # Transform the scale of the data\n",
+        "    scaler, train_scaled, test_scaled = scale(train, test)\n",
         "\n",
-        "# fit the model\n",
-        "lstm_model = fit_lstm(train_scaled, 1, 1500, 1)\n",
+        "    # Fit the model\n",
+        "    lstm_model = fit_lstm(train_scaled, 1, 1500, 1)\n",
         "\n",
-        "# forecast the entire training dataset to build up state for forecasting\n",
-        "train_reshaped = train_scaled[:, 0].reshape(len(train_scaled), 1, 1)\n",
-        "lstm_model.predict(train_reshaped, batch_size=1)\n",
+        "    # Forecast the entire training dataset to build up state for forecasting\n",
+        "    train_reshaped = train_scaled[:, 0].reshape(len(train_scaled), 1, 1)\n",
+        "    lstm_model.predict(train_reshaped, batch_size=1)\n",
         "\n",
-        "# walk-forward validation on the test data\n",
-        "predictions = list()\n",
-        "yhat_sum = 0\n",
-        "for i in range(len(test_scaled)):\n",
-        "    # make one-step forecast\n",
-        "    X, y = test_scaled[i, 0:-1], test_scaled[i, -1]\n",
-        "    yhat = forecast_lstm(lstm_model, 1, X)\n",
-        "    # invert scaling\n",
-        "    yhat = invert_scale(scaler, X, yhat)\n",
-        "    # store forecast\n",
-        "    predictions.append(yhat)\n",
-        "    raw_values = series.values\n",
-        "    expected = raw_values[len(train) + i]\n",
-        "    yhat_sum = yhat_sum + yhat\n",
-        "print(yhat_sum)"
+        "    # Walk-forward validation on the test data\n",
+        "    yhat_sum = 0\n",
+        "    for i in range(len(test_scaled)):\n",
+        "        # Make one-step forecast\n",
+        "        X, y = test_scaled[i, 0:-1], test_scaled[i, -1]\n",
+        "        yhat = forecast_lstm(lstm_model, 1, X)\n",
+        "        # Invert scaling\n",
+        "        yhat = invert_scale(scaler, X, yhat)\n",
+        "        # Sum the weekly forecasts\n",
+        "        yhat_sum = yhat_sum + yhat\n",
+        "\n",
+        "    return yhat_sum"
       ],
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "6.0249727964401245\n",
-            "13.018918633460999\n",
-            "20.00202178955078\n",
-            "26.703291535377502\n",
-            "33.4661203622818\n",
-            "40.08764445781708\n",
-            "46.62446320056915\n",
-            "53.3955854177475\n",
-            "59.92102265357971\n",
-            "66.82090222835541\n",
-            "73.69872868061066\n",
-            "80.43732106685638\n",
-            "86.9426703453064\n",
-            "93.30332934856415\n",
-            "99.60086703300476\n",
-            "105.92956483364105\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -841,10 +823,40 @@
         "colab": {}
       },
       "source": [
-        ""
+        "prediction = lstm_pred('SF')"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cb9y7uj9z1lX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1b434f71-be7d-4e51-951e-bf1d5f8cb584"
+      },
+      "source": [
+        "prediction"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "103.95631432533264"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     }
   ]
 }
