--- a/metrics/Metrics4.ipynb
+++ b/metrics/Metrics4.ipynb
@@ -38,7 +38,7 @@
       },
       "source": [
         "# Load the raw data\n",
-        "w1_results_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-prod1/predictions-week1.csv')"
+        "w1_results_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/combined-predictions/predictions-week1.csv)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -67,7 +67,7 @@
         "\n",
         "w1_results_df.head()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -225,7 +225,7 @@
         "# Calculate the MAE for current points using the average of previous weeks\n",
         "for i in range(1, 18):\n",
         "\n",
-        "    filename = 'https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-prod1/predictions-week' + str(i) + '.csv'\n",
+        "    filename = 'https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/combined-predictions/predictions-week' + str(i) + '.csv'\n",
         "    \n",
         "    # Column names\n",
         "    week_cur = 'week' + str(i) + '-cur'\n",
@@ -256,7 +256,7 @@
         "    week_ca_mae = mean_absolute_error(week_act, week_current)\n",
         "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
