--- a/neural-network/Defense_Predictions.ipynb
+++ b/neural-network/Defense_Predictions.ipynb
@@ -5,13 +5,14 @@
     "colab": {
       "name": "Untitled82.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+vcSMM6M0bbjrZxafrRAb",
+      "authorship_tag": "ABX9TyPE9gvT+dbXFi4wr3e5nCXE",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -44,11 +45,7 @@
       "metadata": {
         "id": "qM2V9XfrHEVw",
         "colab_type": "code",
-        "outputId": "1192c9be-4f02-4c6f-c087-d27bb406a688",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 88
-        }
+        "colab": {}
       },
       "source": [
         "# Imports\n",
@@ -74,18 +71,8 @@
         "\n",
         "import numpy"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n",
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -108,7 +95,7 @@
       "metadata": {
         "id": "XkQBP0b-HM7H",
         "colab_type": "code",
-        "outputId": "0aa94a88-dbc7-4bce-971c-a1d53dfede48",
+        "outputId": "9bd0dc19-85bc-4f12-d469-d3960f8fed39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 372
@@ -118,7 +105,7 @@
         "# The dataframe of actual defense points for each game from 2000-2019\n",
         "defense_df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -665,7 +652,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 38
         }
       ]
     },
@@ -674,7 +661,7 @@
       "metadata": {
         "id": "BQQxtri9HRjc",
         "colab_type": "code",
-        "outputId": "3713378f-be05-4828-ec0e-afa341bc3ba5",
+        "outputId": "cb02a259-5f19-4e80-8193-f2a6d0b59915",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -684,7 +671,7 @@
         "# The dataframe of all 2019 players\n",
         "player_df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -778,7 +765,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 39
         }
       ]
     },
@@ -787,7 +774,7 @@
       "metadata": {
         "id": "-eAmeqx6O2zG",
         "colab_type": "code",
-        "outputId": "c55efd3b-fee3-4785-e7a0-ccac420438be",
+        "outputId": "00ab3c70-3136-4fcf-cac2-cabac0d33688",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -797,7 +784,7 @@
         "# The dataframe of bye weeks for 2019 teams\n",
         "bye_df.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,7 +878,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 40
         }
       ]
     },
@@ -1045,7 +1032,7 @@
         "    scaler, train_scaled, test_scaled = scale(train, test)\n",
         "\n",
         "    # Fit the model\n",
-        "    lstm_model = fit_lstm(train_scaled, 1, 1500, 1)\n",
+        "    lstm_model = fit_lstm(train_scaled, 1, 100, 1)\n",
         "\n",
         "    # Forecast the entire training dataset to build up state for forecasting\n",
         "    train_reshaped = train_scaled[:, 0].reshape(len(train_scaled), 1, 1)\n",
@@ -1186,11 +1173,11 @@
       "metadata": {
         "id": "i_15eBPiLVo5",
         "colab_type": "code",
+        "outputId": "15e2257f-01d4-49ac-cff5-d0db0a16b74d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 561
-        },
-        "outputId": "a2cdff86-77dc-4286-c983-294e8e651b5e"
+        }
       },
       "source": [
         "# Run for seasons 1 through 17\n",
@@ -1210,7 +1197,7 @@
         "    file_name = '/content/week' + str(week) + '-pred-defense.csv'\n",
         "    final_df.to_csv(file_name, index=False)"
       ],
-      "execution_count": 16,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
