--- a/neural-network/Defense_Predictions.ipynb
+++ b/neural-network/Defense_Predictions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled82.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQL+FgmSFRySZFS3vqIlbM",
+      "authorship_tag": "ABX9TyMo0HiJd9JwlGosnQuxH96v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,11 @@
       "metadata": {
         "id": "qM2V9XfrHEVw",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "20298b15-ed3b-4883-8654-a46011d35e95"
       },
       "source": [
         "# Imports\n",
@@ -54,8 +58,16 @@
         "\n",
         "import numpy"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -78,7 +90,7 @@
       "metadata": {
         "id": "XkQBP0b-HM7H",
         "colab_type": "code",
-        "outputId": "9bd0dc19-85bc-4f12-d469-d3960f8fed39",
+        "outputId": "430b46fb-9c77-4b9f-b71b-72d737b5fa0a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 372
@@ -88,7 +100,7 @@
         "# The dataframe of actual defense points for each game from 2000-2019\n",
         "defense_df.head()"
       ],
-      "execution_count": 38,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,7 +647,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 4
         }
       ]
     },
@@ -644,7 +656,7 @@
       "metadata": {
         "id": "BQQxtri9HRjc",
         "colab_type": "code",
-        "outputId": "cb02a259-5f19-4e80-8193-f2a6d0b59915",
+        "outputId": "8a3f7acf-1205-4143-ee2f-a2bd89c24497",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -654,7 +666,7 @@
         "# The dataframe of all 2019 players\n",
         "player_df.head()"
       ],
-      "execution_count": 39,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +760,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 5
         }
       ]
     },
@@ -757,7 +769,7 @@
       "metadata": {
         "id": "-eAmeqx6O2zG",
         "colab_type": "code",
-        "outputId": "00ab3c70-3136-4fcf-cac2-cabac0d33688",
+        "outputId": "1e25a438-f54f-4b8c-eb41-f8fc2ce727f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -767,7 +779,7 @@
         "# The dataframe of bye weeks for 2019 teams\n",
         "bye_df.head()"
       ],
-      "execution_count": 40,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,7 +873,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 6
         }
       ]
     },
@@ -1002,14 +1014,14 @@
         "colab": {}
       },
       "source": [
-        "def lstm_pred(team):\n",
+        "def lstm_pred(team, np):\n",
         "    series = make_series(team)\n",
         "    X = series.values\n",
         "    supervised = timeseries_to_supervised(X, 1)\n",
         "    supervised_values = supervised.values\n",
         "\n",
         "    # Split data into train and test-sets\n",
-        "    train, test = supervised_values[0:-16], supervised_values[-16:]\n",
+        "    train, test = supervised_values[0:-np], supervised_values[-np:]\n",
         "\n",
         "    # Transform the scale of the data\n",
         "    scaler, train_scaled, test_scaled = scale(train, test)\n",
@@ -1142,7 +1154,7 @@
         " \n",
         "        # Calculate predicted points\n",
         "        print(player)\n",
-        "        pred_points = lstm_pred(player)\n",
+        "        pred_points = lstm_pred(player, n_periods)\n",
         "\n",
         "        week_df = add_row(week_df, player, first, last, name, position1, week_cname, \n",
         "                          week_pname, week_aname, cur_points, pred_points, act_points)\n",
@@ -1156,15 +1168,15 @@
       "metadata": {
         "id": "i_15eBPiLVo5",
         "colab_type": "code",
-        "outputId": "15e2257f-01d4-49ac-cff5-d0db0a16b74d",
+        "outputId": "307fdf20-1b3f-42b0-97d3-ec26d5635687",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 561
+          "height": 1000
         }
       },
       "source": [
         "# Run for seasons 1 through 17\n",
-        "for i in range(1, 2):\n",
+        "for i in range(6, 8):\n",
         "    week = i\n",
         "    final_df = main(week)\n",
         "\n",
@@ -1180,11 +1192,43 @@
         "    file_name = '/content/week' + str(week) + '-pred-defense.csv'\n",
         "    final_df.to_csv(file_name, index=False)"
       ],
-      "execution_count": 50,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "SF\n",
+            "CHI\n",
+            "CIN\n",
+            "BUF\n",
+            "DEN\n",
+            "CLE\n",
+            "TB\n",
+            "ARI\n",
+            "LAC\n",
+            "KC\n",
+            "IND\n",
+            "DAL\n",
+            "MIA\n",
+            "PHI\n",
+            "ATL\n",
+            "NYG\n",
+            "JAC\n",
+            "NYJ\n",
+            "DET\n",
+            "GB\n",
+            "CAR\n",
+            "NE\n",
+            "OAK\n",
+            "LA\n",
+            "BAL\n",
+            "WAS\n",
+            "NO\n",
+            "SEA\n",
+            "PIT\n",
+            "HOU\n",
+            "TEN\n",
+            "MIN\n",
             "SF\n",
             "CHI\n",
             "CIN\n",
