--- a/metrics/Metrics_Unit_Test.ipynb
+++ b/metrics/Metrics_Unit_Test.ipynb
@@ -38,7 +38,7 @@
       },
       "source": [
         "# Load the raw data\n",
-        "w1_results_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/combined-predictions/predictions-week1.csv)"
+        "w1_results_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-nn/week1-pred-defense.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "RgOXqOBKx4MC",
         "colab_type": "code",
-        "outputId": "696443e9-8bb0-4cd2-ccae-54c709050cc5",
+        "outputId": "e807d6e9-aa4f-4e80-991d-2f3454bbdc66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -67,7 +67,7 @@
         "\n",
         "w1_results_df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,111 +101,93 @@
               "      <th>week1-act</th>\n",
               "      <th>week1-diff</th>\n",
               "      <th>week1-pct</th>\n",
-              "      <th>rank-cur</th>\n",
-              "      <th>rank-pred</th>\n",
-              "      <th>rank-act</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>TG-1950</td>\n",
-              "      <td>Todd</td>\n",
-              "      <td>Gurley</td>\n",
-              "      <td>Todd Gurley</td>\n",
-              "      <td>RB</td>\n",
-              "      <td>313.10</td>\n",
-              "      <td>344</td>\n",
-              "      <td>188.40</td>\n",
-              "      <td>156.079531</td>\n",
-              "      <td>0.453088</td>\n",
-              "      <td>7.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>43.0</td>\n",
+              "      <td>SF</td>\n",
+              "      <td>San Francisco</td>\n",
+              "      <td>49ers</td>\n",
+              "      <td>San Francisco 49ers</td>\n",
+              "      <td>DF</td>\n",
+              "      <td>50.0</td>\n",
+              "      <td>102</td>\n",
+              "      <td>140</td>\n",
+              "      <td>-37.709454</td>\n",
+              "      <td>-0.368650</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>SB-0212</td>\n",
-              "      <td>Saquon</td>\n",
-              "      <td>Barkley</td>\n",
-              "      <td>Saquon Barkley</td>\n",
-              "      <td>RB</td>\n",
-              "      <td>304.80</td>\n",
-              "      <td>323</td>\n",
-              "      <td>196.10</td>\n",
-              "      <td>127.750000</td>\n",
-              "      <td>0.394473</td>\n",
-              "      <td>9.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>36.0</td>\n",
+              "      <td>CHI</td>\n",
+              "      <td>Chicago</td>\n",
+              "      <td>Bears</td>\n",
+              "      <td>Chicago Bears</td>\n",
+              "      <td>DF</td>\n",
+              "      <td>176.0</td>\n",
+              "      <td>125</td>\n",
+              "      <td>90</td>\n",
+              "      <td>35.597312</td>\n",
+              "      <td>0.283424</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>RW-3850</td>\n",
-              "      <td>Russell</td>\n",
-              "      <td>Wilson</td>\n",
-              "      <td>Russell Wilson</td>\n",
-              "      <td>QB</td>\n",
-              "      <td>301.42</td>\n",
-              "      <td>306</td>\n",
-              "      <td>333.64</td>\n",
-              "      <td>-26.917143</td>\n",
-              "      <td>-0.087757</td>\n",
-              "      <td>10.0</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>4.0</td>\n",
+              "      <td>CIN</td>\n",
+              "      <td>Cincinnati</td>\n",
+              "      <td>Bengals</td>\n",
+              "      <td>Cincinnati Bengals</td>\n",
+              "      <td>DF</td>\n",
+              "      <td>89.0</td>\n",
+              "      <td>110</td>\n",
+              "      <td>63</td>\n",
+              "      <td>47.359384</td>\n",
+              "      <td>0.429138</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>DP-2037</td>\n",
-              "      <td>Dak</td>\n",
-              "      <td>Prescott</td>\n",
-              "      <td>Dak Prescott</td>\n",
-              "      <td>QB</td>\n",
-              "      <td>290.90</td>\n",
-              "      <td>299</td>\n",
-              "      <td>344.74</td>\n",
-              "      <td>-45.667500</td>\n",
-              "      <td>-0.152697</td>\n",
-              "      <td>12.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>3.0</td>\n",
+              "      <td>BUF</td>\n",
+              "      <td>Buffalo</td>\n",
+              "      <td>Bills</td>\n",
+              "      <td>Buffalo Bills</td>\n",
+              "      <td>DF</td>\n",
+              "      <td>92.0</td>\n",
+              "      <td>111</td>\n",
+              "      <td>122</td>\n",
+              "      <td>-10.205664</td>\n",
+              "      <td>-0.091290</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>AR-1300</td>\n",
-              "      <td>Aaron</td>\n",
-              "      <td>Rodgers</td>\n",
-              "      <td>Aaron Rodgers</td>\n",
-              "      <td>QB</td>\n",
-              "      <td>317.58</td>\n",
-              "      <td>295</td>\n",
-              "      <td>282.38</td>\n",
-              "      <td>13.352208</td>\n",
-              "      <td>0.045150</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>11.0</td>\n",
+              "      <td>DEN</td>\n",
+              "      <td>Denver</td>\n",
+              "      <td>Broncos</td>\n",
+              "      <td>Denver Broncos</td>\n",
+              "      <td>DF</td>\n",
+              "      <td>123.0</td>\n",
+              "      <td>116</td>\n",
+              "      <td>92</td>\n",
+              "      <td>24.214850</td>\n",
+              "      <td>0.208363</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "    player    first      last  ... rank-cur rank-pred  rank-act\n",
-              "0  TG-1950     Todd    Gurley  ...      7.0       1.0      43.0\n",
-              "1  SB-0212   Saquon   Barkley  ...      9.0       2.0      36.0\n",
-              "2  RW-3850  Russell    Wilson  ...     10.0       3.0       4.0\n",
-              "3  DP-2037      Dak  Prescott  ...     12.0       4.0       3.0\n",
-              "4  AR-1300    Aaron   Rodgers  ...      5.0       5.0      11.0\n",
+              "  player          first     last  ... week1-act week1-diff  week1-pct\n",
+              "0     SF  San Francisco    49ers  ...       140 -37.709454  -0.368650\n",
+              "1    CHI        Chicago    Bears  ...        90  35.597312   0.283424\n",
+              "2    CIN     Cincinnati  Bengals  ...        63  47.359384   0.429138\n",
+              "3    BUF        Buffalo    Bills  ...       122 -10.205664  -0.091290\n",
+              "4    DEN         Denver  Broncos  ...        92  24.214850   0.208363\n",
               "\n",
-              "[5 rows x 13 columns]"
+              "[5 rows x 10 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 4
         }
       ]
     },
@@ -214,7 +196,7 @@
       "metadata": {
         "id": "BHPmWvto0XSY",
         "colab_type": "code",
-        "outputId": "1eb4bce0-0379-4e39-d707-5e1aad7e93f3",
+        "outputId": "ca2dd065-d095-4d2b-b9af-d009ad35e615",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 884
@@ -225,7 +207,7 @@
         "# Calculate the MAE for current points using the average of previous weeks\n",
         "for i in range(1, 18):\n",
         "\n",
-        "    filename = 'https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/combined-predictions/predictions-week' + str(i) + '.csv'\n",
+        "    filename = 'https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-nn/week' + str(i) + '-pred-defense.csv'\n",
         "    \n",
         "    # Column names\n",
         "    week_cur = 'week' + str(i) + '-cur'\n",
@@ -256,61 +238,162 @@
         "    week_ca_mae = mean_absolute_error(week_act, week_current)\n",
         "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "MAE predicted vs actual week  1 34.48\n",
-            "MAE current vs actual week  1 36.30 \n",
+            "MAE predicted vs actual week  1 24.53\n",
+            "MAE current vs actual week  1 28.50 \n",
             "\n",
-            "MAE predicted vs actual week  2 32.88\n",
-            "MAE current vs actual week  2 50.17 \n",
+            "MAE predicted vs actual week  2 20.69\n",
+            "MAE current vs actual week  2 75.69 \n",
             "\n",
-            "MAE predicted vs actual week  3 29.52\n",
-            "MAE current vs actual week  3 37.44 \n",
+            "MAE predicted vs actual week  3 20.03\n",
+            "MAE current vs actual week  3 40.86 \n",
             "\n",
-            "MAE predicted vs actual week  4 27.61\n",
-            "MAE current vs actual week  4 32.51 \n",
+            "MAE predicted vs actual week  4 20.03\n",
+            "MAE current vs actual week  4 38.61 \n",
             "\n",
-            "MAE predicted vs actual week  5 25.53\n",
-            "MAE current vs actual week  5 28.59 \n",
+            "MAE predicted vs actual week  5 18.16\n",
+            "MAE current vs actual week  5 32.58 \n",
             "\n",
-            "MAE predicted vs actual week  6 23.22\n",
-            "MAE current vs actual week  6 26.51 \n",
+            "MAE predicted vs actual week  6 19.19\n",
+            "MAE current vs actual week  6 29.59 \n",
             "\n",
-            "MAE predicted vs actual week  7 21.96\n",
-            "MAE current vs actual week  7 23.69 \n",
+            "MAE predicted vs actual week  7 18.59\n",
+            "MAE current vs actual week  7 26.75 \n",
             "\n",
-            "MAE predicted vs actual week  8 20.57\n",
-            "MAE current vs actual week  8 21.23 \n",
+            "MAE predicted vs actual week  8 15.31\n",
+            "MAE current vs actual week  8 21.91 \n",
             "\n",
-            "MAE predicted vs actual week  9 18.01\n",
-            "MAE current vs actual week  9 19.12 \n",
+            "MAE predicted vs actual week  9 15.25\n",
+            "MAE current vs actual week  9 21.85 \n",
             "\n",
-            "MAE predicted vs actual week 10 16.11\n",
-            "MAE current vs actual week 10 16.87 \n",
+            "MAE predicted vs actual week 10 16.94\n",
+            "MAE current vs actual week 10 20.29 \n",
             "\n",
-            "MAE predicted vs actual week 11 14.15\n",
-            "MAE current vs actual week 11 14.53 \n",
+            "MAE predicted vs actual week 11 13.03\n",
+            "MAE current vs actual week 11 17.38 \n",
             "\n",
-            "MAE predicted vs actual week 12 12.51\n",
-            "MAE current vs actual week 12 12.56 \n",
+            "MAE predicted vs actual week 12 11.69\n",
+            "MAE current vs actual week 12 14.36 \n",
             "\n",
-            "MAE predicted vs actual week 13 11.00\n",
-            "MAE current vs actual week 13 10.79 \n",
+            "MAE predicted vs actual week 13 11.88\n",
+            "MAE current vs actual week 13 13.97 \n",
             "\n",
-            "MAE predicted vs actual week 14 9.04\n",
-            "MAE current vs actual week 14 8.92 \n",
+            "MAE predicted vs actual week 14 7.91\n",
+            "MAE current vs actual week 14 10.31 \n",
             "\n",
-            "MAE predicted vs actual week 15 7.08\n",
-            "MAE current vs actual week 15 7.12 \n",
+            "MAE predicted vs actual week 15 7.91\n",
+            "MAE current vs actual week 15 9.16 \n",
             "\n",
-            "MAE predicted vs actual week 16 5.19\n",
-            "MAE current vs actual week 16 5.37 \n",
+            "MAE predicted vs actual week 16 5.81\n",
+            "MAE current vs actual week 16 6.66 \n",
             "\n",
-            "MAE predicted vs actual week 17 2.99\n",
-            "MAE current vs actual week 17 3.20 \n",
+            "MAE predicted vs actual week 17 4.44\n",
+            "MAE current vs actual week 17 4.53 \n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "keHHi2batJIc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 884
+        },
+        "outputId": "58e619fb-0487-4b1e-8ca2-44ab5a217a5d"
+      },
+      "source": [
+        "# Calculate the MAE for predicted points vs. actual points for NN\n",
+        "# Calculate the MAE for predicted points vs. actual points for ARIMA\n",
+        "for i in range(1, 18):\n",
+        "\n",
+        "    filename_nn = 'https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-nn/week' + str(i) + '-pred-defense.csv'\n",
+        "    filename_ar = 'https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-final/week' + str(i) + '-pred-defense.csv'\n",
+        "    \n",
+        "    # Column names\n",
+        "    week_pred = 'week' + str(i) + '-pred'\n",
+        "    week_act = 'week' + str(i) + '-act'\n",
+        "\n",
+        "    # Weekly predictions\n",
+        "    results_nn_df = pd.read_csv(filename_nn)\n",
+        "    results_ar_df = pd.read_csv(filename_ar)\n",
+        "\n",
+        "    # Creat the NN and ARIMA prediction lists\n",
+        "    week_pred_nn = results_nn_df[week_pred].tolist()\n",
+        "    week_pred_ar = results_ar_df[week_pred].tolist()\n",
+        "    week_act = results_nn_df[week_act].tolist()\n",
+        "\n",
+        "    # Calculate the MAE for NN vs. actual\n",
+        "    week_nn_mae = mean_absolute_error(week_act, week_pred_nn)\n",
+        "    print('MAE NN predicted vs actual week {0:2d} {1:3.2f}'.format(i, week_nn_mae))\n",
+        "\n",
+        "    # Calculate the MAE for ARIMA vs. actual\n",
+        "    week_ar_mae = mean_absolute_error(week_act, week_pred_ar)\n",
+        "    print('MAE ARIMA current vs actual week {0:2d} {1:3.2f}'.format(i, week_ar_mae), '\\n')"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "MAE NN predicted vs actual week  1 24.53\n",
+            "MAE ARIMA current vs actual week  1 26.50 \n",
+            "\n",
+            "MAE NN predicted vs actual week  2 20.69\n",
+            "MAE ARIMA current vs actual week  2 22.59 \n",
+            "\n",
+            "MAE NN predicted vs actual week  3 20.03\n",
+            "MAE ARIMA current vs actual week  3 20.38 \n",
+            "\n",
+            "MAE NN predicted vs actual week  4 20.03\n",
+            "MAE ARIMA current vs actual week  4 20.66 \n",
+            "\n",
+            "MAE NN predicted vs actual week  5 18.16\n",
+            "MAE ARIMA current vs actual week  5 20.22 \n",
+            "\n",
+            "MAE NN predicted vs actual week  6 19.19\n",
+            "MAE ARIMA current vs actual week  6 19.84 \n",
+            "\n",
+            "MAE NN predicted vs actual week  7 18.59\n",
+            "MAE ARIMA current vs actual week  7 19.44 \n",
+            "\n",
+            "MAE NN predicted vs actual week  8 15.31\n",
+            "MAE ARIMA current vs actual week  8 16.62 \n",
+            "\n",
+            "MAE NN predicted vs actual week  9 15.25\n",
+            "MAE ARIMA current vs actual week  9 16.81 \n",
+            "\n",
+            "MAE NN predicted vs actual week 10 16.94\n",
+            "MAE ARIMA current vs actual week 10 15.28 \n",
+            "\n",
+            "MAE NN predicted vs actual week 11 13.03\n",
+            "MAE ARIMA current vs actual week 11 14.28 \n",
+            "\n",
+            "MAE NN predicted vs actual week 12 11.69\n",
+            "MAE ARIMA current vs actual week 12 13.09 \n",
+            "\n",
+            "MAE NN predicted vs actual week 13 11.88\n",
+            "MAE ARIMA current vs actual week 13 12.28 \n",
+            "\n",
+            "MAE NN predicted vs actual week 14 7.91\n",
+            "MAE ARIMA current vs actual week 14 8.88 \n",
+            "\n",
+            "MAE NN predicted vs actual week 15 7.91\n",
+            "MAE ARIMA current vs actual week 15 8.47 \n",
+            "\n",
+            "MAE NN predicted vs actual week 16 5.81\n",
+            "MAE ARIMA current vs actual week 16 6.12 \n",
+            "\n",
+            "MAE NN predicted vs actual week 17 4.44\n",
+            "MAE ARIMA current vs actual week 17 4.44 \n",
             "\n"
           ],
           "name": "stdout"
