--- a/metrics/Metrics_Unit_Test.ipynb
+++ b/metrics/Metrics_Unit_Test.ipynb
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "RgOXqOBKx4MC",
         "colab_type": "code",
-        "outputId": "e807d6e9-aa4f-4e80-991d-2f3454bbdc66",
+        "outputId": "e15bc2e8-f080-4330-ebd5-39d95ae2b1e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -67,7 +67,7 @@
         "\n",
         "w1_results_df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +187,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -196,14 +196,14 @@
       "metadata": {
         "id": "BHPmWvto0XSY",
         "colab_type": "code",
-        "outputId": "ca2dd065-d095-4d2b-b9af-d009ad35e615",
+        "outputId": "c843c79c-d577-4022-f199-148024b8176f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 884
         }
       },
       "source": [
-        "# Calculate the MAE for predicted points vs. actual points\n",
+        "# Calculate the MAE for predicted points vs. actual points for NN\n",
         "# Calculate the MAE for current points using the average of previous weeks\n",
         "for i in range(1, 18):\n",
         "\n",
@@ -238,7 +238,7 @@
         "    week_ca_mae = mean_absolute_error(week_act, week_current)\n",
         "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,7 +308,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 884
         },
-        "outputId": "58e619fb-0487-4b1e-8ca2-44ab5a217a5d"
+        "outputId": "85e577fc-24cf-490b-9e6e-611b2007c898"
       },
       "source": [
         "# Calculate the MAE for predicted points vs. actual points for NN\n",
@@ -337,63 +337,63 @@
         "\n",
         "    # Calculate the MAE for ARIMA vs. actual\n",
         "    week_ar_mae = mean_absolute_error(week_act, week_pred_ar)\n",
-        "    print('MAE ARIMA current vs actual week {0:2d} {1:3.2f}'.format(i, week_ar_mae), '\\n')"
+        "    print('MAE ARIMA predicted vs actual week {0:2d} {1:3.2f}'.format(i, week_ar_mae), '\\n')"
       ],
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "MAE NN predicted vs actual week  1 24.53\n",
-            "MAE ARIMA current vs actual week  1 26.50 \n",
+            "MAE ARIMA predicted vs actual week  1 26.50 \n",
             "\n",
             "MAE NN predicted vs actual week  2 20.69\n",
-            "MAE ARIMA current vs actual week  2 22.59 \n",
+            "MAE ARIMA predicted vs actual week  2 22.59 \n",
             "\n",
             "MAE NN predicted vs actual week  3 20.03\n",
-            "MAE ARIMA current vs actual week  3 20.38 \n",
+            "MAE ARIMA predicted vs actual week  3 20.38 \n",
             "\n",
             "MAE NN predicted vs actual week  4 20.03\n",
-            "MAE ARIMA current vs actual week  4 20.66 \n",
+            "MAE ARIMA predicted vs actual week  4 20.66 \n",
             "\n",
             "MAE NN predicted vs actual week  5 18.16\n",
-            "MAE ARIMA current vs actual week  5 20.22 \n",
+            "MAE ARIMA predicted vs actual week  5 20.22 \n",
             "\n",
             "MAE NN predicted vs actual week  6 19.19\n",
-            "MAE ARIMA current vs actual week  6 19.84 \n",
+            "MAE ARIMA predicted vs actual week  6 19.84 \n",
             "\n",
             "MAE NN predicted vs actual week  7 18.59\n",
-            "MAE ARIMA current vs actual week  7 19.44 \n",
+            "MAE ARIMA predicted vs actual week  7 19.44 \n",
             "\n",
             "MAE NN predicted vs actual week  8 15.31\n",
-            "MAE ARIMA current vs actual week  8 16.62 \n",
+            "MAE ARIMA predicted vs actual week  8 16.62 \n",
             "\n",
             "MAE NN predicted vs actual week  9 15.25\n",
-            "MAE ARIMA current vs actual week  9 16.81 \n",
+            "MAE ARIMA predicted vs actual week  9 16.81 \n",
             "\n",
             "MAE NN predicted vs actual week 10 16.94\n",
-            "MAE ARIMA current vs actual week 10 15.28 \n",
+            "MAE ARIMA predicted vs actual week 10 15.28 \n",
             "\n",
             "MAE NN predicted vs actual week 11 13.03\n",
-            "MAE ARIMA current vs actual week 11 14.28 \n",
+            "MAE ARIMA predicted vs actual week 11 14.28 \n",
             "\n",
             "MAE NN predicted vs actual week 12 11.69\n",
-            "MAE ARIMA current vs actual week 12 13.09 \n",
+            "MAE ARIMA predicted vs actual week 12 13.09 \n",
             "\n",
             "MAE NN predicted vs actual week 13 11.88\n",
-            "MAE ARIMA current vs actual week 13 12.28 \n",
+            "MAE ARIMA predicted vs actual week 13 12.28 \n",
             "\n",
             "MAE NN predicted vs actual week 14 7.91\n",
-            "MAE ARIMA current vs actual week 14 8.88 \n",
+            "MAE ARIMA predicted vs actual week 14 8.88 \n",
             "\n",
             "MAE NN predicted vs actual week 15 7.91\n",
-            "MAE ARIMA current vs actual week 15 8.47 \n",
+            "MAE ARIMA predicted vs actual week 15 8.47 \n",
             "\n",
             "MAE NN predicted vs actual week 16 5.81\n",
-            "MAE ARIMA current vs actual week 16 6.12 \n",
+            "MAE ARIMA predicted vs actual week 16 6.12 \n",
             "\n",
             "MAE NN predicted vs actual week 17 4.44\n",
-            "MAE ARIMA current vs actual week 17 4.44 \n",
+            "MAE ARIMA predicted vs actual week 17 4.44 \n",
             "\n"
           ],
           "name": "stdout"
